Fixed alignment and contrast issues.

--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,7 @@
 .navigation-backdrop--contrast {
   background: linear-gradient(
     to bottom,
-    rgba(255, 255, 255, 0.8) 20%,
+    rgba(255, 255, 255, 0.8) 0%,
     rgba(255, 255, 255, 0) 100%
   );
 }
@@ -52,7 +52,7 @@
   .navigation-backdrop--contrast {
     background: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0.8) 20%,
+      rgba(0, 0, 0, 0.8) 0%,
       rgba(0, 0, 0, 0) 100%
     );
   }
